# rust-to-npm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
rust-to-npm/: Cargo.toml  README.md
rust-to-npm/src/: lib.rs
rust-to-npm/src/generators/: mod.rs  package.rs  pre_install.rs
src/: main.rs
src/generators/: mod.rs  package.rs  pre_install.rs  start.rs  uninstall.rs
src/options/: args.rs  sub_command.rs
