[package]
name = "rust-to-npm"
version = "0.2.0"
edition = "2021"
description = "ship a rust project to npm on all operating systems leveraging cargo."

repository = "https://github.com/a11ywatch/rust-to-npm"
readme = "README.md"
keywords = ["rust-to-npm", "deploy-rust", "npm", "rust"]
categories = ["command-line-utilities", "development-tools::build-utils"]
license = "MIT"

[dependencies]
convert_case = "0.5.0"
serde = "1.0"
serde_derive = "1.0.137"
toml = "0.5.9"
