[package]

name = "rust-to-npm-cli"
version = "0.4.12"
edition = "2021"
description = "deploy a rust project to npm in one command cli."
repository = "https://github.com/a11ywatch/rust-to-npm"
readme = "README.md"
keywords = ["rust-to-npm", "deploy-rust", "npm", "rust"]
categories = ["command-line-utilities", "development-tools::build-utils"]
license = "MIT"
homepage = "https://github.com/a11ywatch/rust-to-npm"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"]}
serde_derive = "1.0.137"
toml = "0.5.9"
rust-to-npm = { path = "../rust-to-npm", version = "0.4.10" }