[package]

name = "rust-to-npm"
version = "0.4.13"
edition = "2021"
description = "deploy a rust project to npm in one command."
repository = "https://github.com/a11ywatch/rust-to-npm"
readme = "README.md"
keywords = ["rust-to-npm", "deploy-rust", "npm", "rust"]
categories = ["development-tools::build-utils"]
license = "MIT"
homepage = "https://github.com/a11ywatch/rust-to-npm"
authors = ["Jeff Mendez <jeff@a11ywatch.com>"]

[dependencies]
serde = { version = "1.0.138", features = ["derive"]}
serde_derive = "1.0.137"
toml = "0.5.9"
